--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
             </svg>
           </div>
           <h3 class="text-xl font-bold mb-3">Open Source</h3>
-          <p class="text-gray-500 leading-relaxed text-sm">MIT licensed and fully open on GitHub. Fork it, contribute to
+          <p class="text-gray-500 leading-relaxed text-sm">MIT licensed and fully comercially useable. Use it, contribute to
             it, ship it in your product — no strings attached.</p>
         </div>
 
@@ -689,31 +689,18 @@
             release — and you're always welcome to submit yours.</p>
         </div>
 
-        <div class="feature-card p-8 sr sr-delay-2">
-          <div class="w-12 h-12 rounded-2xl bg-black flex items-center justify-center mb-6">
+        <!-- MY STORY — spans 2 columns -->
+        <div class="feature-card p-8 sr sr-delay-2 md:col-span-2" style="background: #111; border-color: #111;">
+          <div class="w-12 h-12 rounded-2xl bg-white/10 flex items-center justify-center mb-6">
             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2"
               stroke-linecap="round" stroke-linejoin="round">
-              <rect x="2" y="3" width="20" height="14" rx="2" ry="2" />
-              <line x1="8" y1="21" x2="16" y2="21" />
-              <line x1="12" y1="17" x2="12" y2="21" />
+              <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z" />
             </svg>
           </div>
-          <h3 class="text-xl font-bold mb-3">Pixel Perfect</h3>
-          <p class="text-gray-500 leading-relaxed text-sm">Crafted on a consistent grid so every icon feels like it
-            belongs together — sharp at any size.</p>
-        </div>
-
-        <div class="feature-card p-8 sr sr-delay-3">
-          <div class="w-12 h-12 rounded-2xl bg-black flex items-center justify-center mb-6">
-            <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2"
-              stroke-linecap="round" stroke-linejoin="round">
-              <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
-              <polyline points="22,6 12,13 2,6" />
-            </svg>
-          </div>
-          <h3 class="text-xl font-bold mb-3">One-Click Copy</h3>
-          <p class="text-gray-500 leading-relaxed text-sm">Copy the SVG code directly to clipboard with a single click,
-            or download as a file. Your workflow, your way.</p>
+          <h3 class="text-xl font-bold mb-3 text-white">My Story</h3>
+          <p class="leading-relaxed text-sm" style="color: rgba(255,255,255,0.65);">
+            I'm a student in my last Semester of my Bachelor in Mediadesign. Often on my journey I needed Icons for projects - not only for uni projects but also privately. This made me realize there are sources with free icons (even commercially!) but there are often strings or fine print, which holds you back. That's why I created Minimaly. For Students, Startups, Freelancers & everything in between. To have a reliable Source of 100% free icons.
+          </p>
         </div>
       </div>
     </div>
@@ -757,19 +744,13 @@
           <div class="grid grid-cols-4 text-center text-sm p-4 compare-row">
             <div class="text-left text-gray-600 pl-2 font-medium">No account needed</div>
             <div class="check">✓</div>
-            <div class="cross">✗</div>
-            <div class="cross">✗</div>
-          </div>
-          <div class="grid grid-cols-4 text-center text-sm p-4 compare-row">
-            <div class="text-left text-gray-600 pl-2 font-medium">Consistent design style</div>
             <div class="check">✓</div>
-            <div class="cross">~</div>
-            <div class="cross">~</div>
+            <div class="cross">✗</div>
           </div>
           <div class="grid grid-cols-4 text-center text-sm p-4">
             <div class="text-left text-gray-600 pl-2 font-medium">Community contributions</div>
             <div class="check">✓</div>
-            <div class="cross">✗</div>
+            <div class="check">✓</div>
             <div class="cross">✗</div>
           </div>
         </div>
@@ -819,10 +800,8 @@
     <div class="max-w-6xl mx-auto">
       <div class="flex flex-col md:flex-row justify-between gap-10 mb-12">
         <div class="max-w-xs">
-          <img src="images/frontpage_images/logo_top_left.png" alt="Minimaly"
-            class="h-6 w-auto mb-4 brightness-0 invert" />
-          <p class="text-gray-500 text-sm leading-relaxed">A 100% free & open source icon database for students,
-            startups, freelancers & everyone in between.</p>
+          <p class="text-gray-500 text-sm leading-relaxed">A 100% free &amp; open source icon database for students,
+            startups, freelancers &amp; everyone in between.</p>
           <div class="flex items-center gap-3 mt-5">
             <a href="https://github.com/EinPallux/Minimaly" target="_blank"
               class="w-8 h-8 rounded-full bg-white/08 flex items-center justify-center hover:bg-white/15 transition-colors">
@@ -834,29 +813,13 @@
           </div>
         </div>
 
-        <div class="grid grid-cols-2 sm:grid-cols-3 gap-8">
+        <div class="grid grid-cols-2 sm:grid-cols-2 gap-8">
           <div>
             <h4 class="text-white text-sm font-bold mb-4">Product</h4>
             <ul class="space-y-2.5">
               <li><a href="database.html" class="footer-link text-sm">Browse Icons</a></li>
               <li><a href="#features" class="footer-link text-sm">Features</a></li>
-              <li><a href="https://github.com/EinPallux/Minimaly" target="_blank"
-                  class="footer-link text-sm">Changelog</a></li>
-              <li><a href="https://github.com/EinPallux/Minimaly/issues" target="_blank"
-                  class="footer-link text-sm">Roadmap</a></li>
-            </ul>
-          </div>
-          <div>
-            <h4 class="text-white text-sm font-bold mb-4">Resources</h4>
-            <ul class="space-y-2.5">
-              <li><a href="https://github.com/EinPallux/Minimaly" target="_blank"
-                  class="footer-link text-sm">Documentation</a></li>
-              <li><a href="https://github.com/EinPallux/Minimaly" target="_blank" class="footer-link text-sm">GitHub</a>
-              </li>
-              <li><a href="https://github.com/EinPallux/Minimaly/issues" target="_blank"
-                  class="footer-link text-sm">Report a Bug</a></li>
-              <li><a href="https://github.com/EinPallux/Minimaly" target="_blank"
-                  class="footer-link text-sm">Contribute</a></li>
+              <li><a href="https://github.com/EinPallux/Minimaly" target="_blank" class="footer-link text-sm">GitHub</a></li>
             </ul>
           </div>
           <div>
@@ -865,6 +828,7 @@
               <li><a href="#" class="footer-link text-sm">MIT License</a></li>
               <li><a href="#" class="footer-link text-sm">Privacy Policy</a></li>
               <li><a href="#" class="footer-link text-sm">Terms of Use</a></li>
+              <li><a href="#" class="footer-link text-sm">Imprint</a></li>
             </ul>
           </div>
         </div>
