--- a/database.html
+++ b/database.html
@@ -889,6 +889,24 @@
             text-decoration: underline;
         }
 
+        /* ── Site Footer ── */
+        .site-footer {
+            background: #111;
+            border-top: 1px solid rgba(255, 255, 255, 0.08);
+            padding: 48px 24px;
+            margin-top: 20px;
+        }
+
+        .footer-link-db {
+            color: rgba(255, 255, 255, 0.5);
+            transition: color 0.2s;
+            text-decoration: none;
+        }
+
+        .footer-link-db:hover {
+            color: white;
+        }
+
         @media (max-width: 640px) {
             .search-wrap {
                 max-width: 100%;
@@ -908,7 +926,12 @@
             .icon-grid {
                 grid-template-columns: repeat(auto-fill, minmax(72px, 1fr));
             }
-        }
+
+            .site-footer-inner {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 12px;
+            }        }
     </style>
 </head>
 
@@ -957,7 +980,7 @@
          PAGE CONTENT
     ══════════════════════════════════════ -->
     <main
-        style="max-width:1200px;margin:0 auto;padding-top:104px;padding-left:24px;padding-right:24px;padding-bottom:80px;">
+        style="max-width:1200px;margin:0 auto;padding-top:104px;padding-left:24px;padding-right:24px;padding-bottom:40px;">
 
         <!-- Featured Collections -->
         <section style="margin-bottom:52px;">
@@ -997,6 +1020,55 @@
             </div>
         </section>
     </main>
+
+    <!-- ══════════════════════════════════════
+         SITE FOOTER
+    ══════════════════════════════════════ -->
+    <footer class="site-footer">
+        <div style="max-width:1200px;margin:0 auto;">
+            <div style="display:flex;flex-direction:column;gap:40px;">
+                <div style="display:flex;flex-wrap:wrap;justify-content:space-between;gap:40px;">
+                    <div style="max-width:300px;">
+                        <p style="color:rgba(255,255,255,0.5);font-size:14px;line-height:1.7;">A 100% free &amp; open source icon database for students, startups, freelancers &amp; everyone in between.</p>
+                        <div style="display:flex;align-items:center;gap:12px;margin-top:20px;">
+                            <a href="https://github.com/EinPallux/Minimaly" target="_blank"
+                                style="width:32px;height:32px;border-radius:50%;background:rgba(255,255,255,0.08);display:flex;align-items:center;justify-content:center;transition:background 0.2s;"
+                                onmouseover="this.style.background='rgba(255,255,255,0.15)'" onmouseout="this.style.background='rgba(255,255,255,0.08)'">
+                                <svg width="14" height="14" viewBox="0 0 24 24" fill="white">
+                                    <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div style="display:grid;grid-template-columns:repeat(2,1fr);gap:32px;">
+                        <div>
+                            <h4 style="color:#fff;font-size:14px;font-weight:700;margin-bottom:16px;">Product</h4>
+                            <ul style="list-style:none;display:flex;flex-direction:column;gap:10px;">
+                                <li><a href="index.html" class="footer-link-db" style="font-size:14px;">Home</a></li>
+                                <li><a href="index.html#features" class="footer-link-db" style="font-size:14px;">Features</a></li>
+                                <li><a href="https://github.com/EinPallux/Minimaly" target="_blank" class="footer-link-db" style="font-size:14px;">GitHub</a></li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h4 style="color:#fff;font-size:14px;font-weight:700;margin-bottom:16px;">Legal</h4>
+                            <ul style="list-style:none;display:flex;flex-direction:column;gap:10px;">
+                                <li><a href="#" class="footer-link-db" style="font-size:14px;">MIT License</a></li>
+                                <li><a href="#" class="footer-link-db" style="font-size:14px;">Privacy Policy</a></li>
+                                <li><a href="#" class="footer-link-db" style="font-size:14px;">Terms of Use</a></li>
+                                <li><a href="#" class="footer-link-db" style="font-size:14px;">Imprint</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div style="display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;padding-top:32px;border-top:1px solid rgba(255,255,255,0.08);gap:12px;">
+                    <p style="color:rgba(255,255,255,0.35);font-size:12px;">© 2025 Minimaly. Made with ♥ and released under the MIT License.</p>
+                    <p style="color:rgba(255,255,255,0.35);font-size:12px;">Free forever. No exceptions.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- ══════════════════════════════════════
          ICON EDITOR POPUP
